--- a/1-batch/docker/debezium_kafka_apicurio_akhq/docker-compose.yaml
+++ b/1-batch/docker/debezium_kafka_apicurio_akhq/docker-compose.yaml
@@ -1,4 +1,5 @@
-# Olist Data Pipeline: Debezium 3.4 (3.4.0) + KRaft (3.4.0) + Apicurio (3.1.6) + AKHQ 
+# Olist Data Pipeline: Debezium 3.4 (3.4.0) + KRaft (3.4.0) + Apicurio (3.1.6) + AKHQ (0.26.0)
+# run this command in terminal first: docker network create data-pipeline-net
 name: olist-modern-stack
 
 services:
