--- a/1-batch/docker/17_minio_spark_iceberg/docker-compose.yaml
+++ b/1-batch/docker/17_minio_spark_iceberg/docker-compose.yaml
@@ -37,7 +37,31 @@ services:
       tail -f /dev/null
       "
   
-  # 3. 
+  # 3. Apache Spark
+  # https://iceberg.apache.org/spark-quickstart/#docker-compose
+  spark:
+    build:
+      context: ./spark
+      dockerfile: Dockerfile
+    container_name: spark
+    depends_on:
+      - minio
+    ports:
+      - 8888:8888   # Jupyter
+      - 8080:8080   # Spark UI
+      - 10000:10000 # Thrift server
+      - 10001:10001 # optional additional port
+    environment:
+      AWS_ACCESS_KEY_ID: minioadmin
+      AWS_SECRET_ACCESS_KEY: minioadmin
+      AWS_REGION: us-east-1
+    volumes:
+      - ./warehouse:/home/iceberg/warehouse
+      - ./notebooks:/home/iceberg/notebooks/notebooks
+    command: >
+      /opt/spark/bin/spark-sql
+      --packages org.apache.iceberg:iceberg-spark-runtime-3.5_2.12:1.6.0, 
+      org.apache.hadoop:hadoop-aws:3.3.4
 
 
 networks:
