--- a/1-batch/docker/17_minio_spark_iceberg_polaris/spark/conf/log4j2.properties
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris/spark/conf/log4j2.properties
@@ -1,38 +1,23 @@
-# ============================
-# Root Logger (default)
-# ============================
-# Levels: OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL
-# Appenders: console, file, etc.
+status = warn
+name = SparkLogConfig
+
+appender.console.type = Console
+appender.console.name = Console
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = [%d{HH:mm:ss}] [%t] %-5level %logger{36} - %msg%n
+
 rootLogger.level = WARN
 rootLogger.appenderRefs = console
 rootLogger.appenderRef.console.ref = Console
 
-# ============================
-# Console Appender
-# ============================
-appender.console.type = Console
-appender.console.name = Console
-appender.console.layout.type = PatternLayout
-# Pattern: timestamp, thread, logger, level, message
-appender.console.layout.pattern = [%d{yyyy-MM-dd HH:mm:ss}] [%t] %-5level %logger{36} - %msg%n
+logger.hadoop.name = org.apache.hadoop
+logger.hadoop.level = WARN
 
-# ============================
-# Reduce noisy loggers
-# ============================
-# Only show WARN+ for Hadoop/S3/etc
-logger.org.apache.hadoop.level = WARN
-logger.org.apache.hadoop.fs.s3a.level = WARN
-logger.org.apache.iceberg.level = INFO
-logger.org.apache.spark.sql.level = INFO
+logger.s3a.name = org.apache.hadoop.fs.s3a
+logger.s3a.level = WARN
 
-# ============================
-# Optional: log to file
-# ============================
-#appender.rolling.type = RollingFile
-#appender.rolling.name = File
-#appender.rolling.fileName = /opt/spark/logs/spark.log
-#appender.rolling.filePattern = /opt/spark/logs/spark-%d{yyyy-MM-dd}.log.gz
-#appender.rolling.layout.type = PatternLayout
-#appender.rolling.layout.pattern = [%d{yyyy-MM-dd HH:mm:ss}] [%t] %-5level %logger{36} - %msg%n
-#appender.rolling.policies.type = Policies
-#appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+logger.iceberg.name = org.apache.iceberg
+logger.iceberg.level = INFO
+
+logger.sparksql.name = org.apache.spark.sql
+logger.sparksql.level = WARN
