until 18_test_minio_spark

--- a/1-batch/docker/17_minio_spark_iceberg_polaris/spark/Dockerfile
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris/spark/Dockerfile
@@ -8,7 +8,7 @@ USER root
 RUN mkdir -p /home/spark /home/iceberg/warehouse /home/iceberg/notebooks && \
     chown -R spark:spark /home/spark /home/iceberg/warehouse
 
-ENV HOME=/home/spark
+# ENV HOME=/home/spark
 WORKDIR /home/spark
 
 # ---------------------------
@@ -21,28 +21,15 @@ RUN apt-get update && \
 # ---------------------------
 # 3️⃣ Add required jars
 # ---------------------------
-RUN mkdir -p /opt/spark/jars && \
-    # Iceberg runtime
-    wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-spark-runtime-4.0_2.13/1.10.1/iceberg-spark-runtime-4.0_2.13-1.10.1.jar && \
+RUN wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-spark-runtime-4.0_2.13/1.10.1/iceberg-spark-runtime-4.0_2.13-1.10.1.jar && \
     # Hadoop AWS
     wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.4.1/hadoop-aws-3.4.1.jar && \
     # AWS SDK bundle
-    wget -P /opt/spark/jars https://repo1.maven.org/maven2/software/amazon/awssdk/bundle/2.24.6/bundle-2.24.6.jar
-
-# ---------------------------
-# 4️⃣ Remove conflicting SLF4J jars from base image
-# ---------------------------
-RUN rm -f /opt/spark/jars/slf4j-nop-*.jar /opt/spark/jars/slf4j-log4j12-*.jar
-
-# ---------------------------
-# 5️⃣ Configure logging & classpath
-# ---------------------------
-ENV SPARK_CLASSPATH=/opt/spark/jars/*
-ENV LOG4J_CONFIGURATION_FILE=/opt/spark/conf/log4j2.properties
-ENV PYSPARK_SUBMIT_ARGS="--driver-class-path /opt/spark/jars/* \
---conf spark.executor.extraClassPath=/opt/spark/jars/* pyspark-shell"
+    wget -P /opt/spark/jars https://repo1.maven.org/maven2/software/amazon/awssdk/bundle/2.24.6/bundle-2.24.6.jar && \
+    wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.20.0/log4j-slf4j-impl-2.20.0.jar
 
 COPY conf/log4j2.properties /opt/spark/conf/log4j2.properties
+COPY conf/spark-defaults.conf /opt/spark/conf/spark-defaults.conf
 
 # ---------------------------
 # 6️⃣ Switch to spark user
