--- a/1-batch/docker/17_minio_spark_iceberg_polaris/spark/conf/spark-defaults.conf
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris/spark/conf/spark-defaults.conf
@@ -1,8 +1,19 @@
+# Basic Extensions
 spark.sql.extensions                   org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
-spark.sql.catalog.demo                 org.apache.iceberg.spark.SparkCatalog
-spark.sql.catalog.demo.type            hadoop
-spark.sql.catalog.demo.warehouse       s3a://warehouse/
+
+# Catalog Configuration (The Polaris Connection)
+spark.sql.catalog.polaris                 org.apache.iceberg.spark.SparkCatalog
+spark.sql.catalog.polaris.type            rest
+spark.sql.catalog.polaris.uri             http://polaris:8181/api/catalog
+spark.sql.catalog.polaris.warehouse       learning_catalog
+
+# Authentication (use Postman)
+spark.sql.catalog.polaris.credential   <CLIENT_ID>:<CLIENT_SECRET>
+spark.sql.catalog.polaris.scope        PRINCIPAL_ROLE:ALL
+
+# S3 / Minio Config
 spark.hadoop.fs.s3a.endpoint           http://minio:9000
 spark.hadoop.fs.s3a.access.key         minioadmin
 spark.hadoop.fs.s3a.secret.key         minioadmin
 spark.hadoop.fs.s3a.path.style.access  true
+spark.hadoop.fs.s3a.impl               org.apache.hadoop.fs.s3a.S3AFileSystem
