--- a/1-batch/docker/17_minio_spark_iceberg_polaris/docker-compose.yaml
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris/docker-compose.yaml
@@ -58,6 +58,7 @@ services:
     container_name: spark
     depends_on:
       - minio
+      - polaris
     ports:
       - 8888:8888   # Jupyter
       - 4040:4040   # Spark UI
@@ -70,11 +71,9 @@ services:
       SPARK_UI_BIND_ADDRESS: 0.0.0.0
       SPARK_UI_PORT: 4040
 
-      AWS_ACCESS_KEY_ID: minioadmin
-      AWS_SECRET_ACCESS_KEY: minioadmin
       AWS_REGION: us-east-1
     volumes:
-      - ./warehouse:/home/iceberg/warehouse
+      # - ./warehouse:/home/iceberg/warehouse (minio have persistent volume)
       - ./notebooks:/home/iceberg/notebooks
     # https://iceberg.apache.org/spark-quickstart/#adding-iceberg-to-spark
 
@@ -86,6 +85,7 @@ services:
       - "8181:8181" # The API we will talk to
       - "8182:8182" # Admin/Management
     environment:
+      # these are needed to create token
       - POLARIS_BOOTSTRAP_CREDENTIALS=POLARIS,admin,password123
       - POLARIS_REALM=POLARIS
 
