--- a/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
@@ -85,8 +85,8 @@ services:
     image: apache/polaris:1.2.0-incubating
     container_name: polaris
     depends_on:
-      postgres:
-        condition: service_healthy
+      polaris-bootstrap:
+        condition: service_completed_successfully
     ports:
       - "8181:8181" # The API we will talk to
       - "8182:8182" # Admin/Management
@@ -100,6 +100,11 @@ services:
       # these are needed to create token
       POLARIS_BOOTSTRAP_CREDENTIALS: POLARIS,admin,password123
       POLARIS_REALM: POLARIS
+      # persistence
+      POLARIS_PERSISTENCE_TYPE: relational-jdbc
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres:5432/polaris
+      QUARKUS_DATASOURCE_USERNAME: postgres
+      QUARKUS_DATASOURCE_PASSWORD: postgres
 
   # 5. postgres for Polaris
   postgres:
@@ -112,6 +117,36 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - polaris_pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d polaris"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # 6. to init schema in polaris postgres
+  polaris-bootstrap:
+    image: apache/polaris-admin-tool:latest
+    container_name: polaris-bootstrap
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      AWS_REGION: us-east-1
+      AWS_ACCESS_KEY_ID: minioadmin
+      AWS_SECRET_ACCESS_KEY: minioadmin
+      #JAVA_OPTS: -Daws.region=us-east-1
+      AWS_ENDPOINT: http://minio:9000/
+      AWS_S3_FORCE_PATH_STYLE: "true"
+      # persistence
+      POLARIS_PERSISTENCE_TYPE: relational-jdbc
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres:5432/polaris
+      QUARKUS_DATASOURCE_USERNAME: postgres
+      QUARKUS_DATASOURCE_PASSWORD: postgres
+    command: 
+      - "bootstrap"
+      - "--realm=POLARIS"
+      - "--credential=POLARIS,admin,password123"
+    restart: "no"
 
 networks:
   default:
