--- a/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
@@ -30,17 +30,24 @@ services:
       - minio
     entrypoint: >
       /bin/sh -c "
+      set -e;
+
       echo 'Waiting for MinIO...';
-      while ! mc alias set local http://minio:9000 minioadmin minioadmin; do
-        echo 'MinIO not reachable yet, retrying in 2s...';
+      until mc alias set local http://minio:9000 minioadmin minioadmin; do
         sleep 2;
       done;
 
-      echo 'MinIO is ready. Creating buckets...';
-      mc mb --ignore-existing local/olist_ecommerce;
-      
-      echo 'Buckets created successfully:';
+      echo 'Waiting for S3 API readiness...';
+      until mc ls local >/dev/null 2>&1; do
+        sleep 2;
+      done;
+
+      echo 'Creating bucket...';
+      mc mb --ignore-existing local/olist-ecommerce;
+
+      echo 'Buckets:';
       mc ls local;
+
       tail -f /dev/null
       "
   
@@ -58,7 +65,7 @@ services:
       - minio
       - polaris
     ports:
-      - 8888:8888   # Jupyter
+      - 8084:8888   # Jupyter (8081, 8082, 8083 are used)
       - 4040:4040   # Spark UI
       - 10000:10000 # Thrift server
       - 10001:10001 # optional additional port
