--- a/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/spark/Dockerfile
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/spark/Dockerfile
@@ -34,7 +34,9 @@ RUN wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/iceberg/ic
     wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.4.1/hadoop-aws-3.4.1.jar && \
     # AWS SDK bundle
     wget -P /opt/spark/jars https://repo1.maven.org/maven2/software/amazon/awssdk/bundle/2.24.6/bundle-2.24.6.jar && \
-    wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.20.0/log4j-slf4j-impl-2.20.0.jar
+    wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.20.0/log4j-slf4j-impl-2.20.0.jar && \
+    # Kafka jar
+    wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.13/4.0.1/spark-sql-kafka-0-10_2.13-4.0.1.jar
 
 # ---------------------------
 # 6️⃣ Switch to spark user
