--- a/1-batch/docker/10_debezium_kafka_apicurio_akhq/docker-compose.yaml
+++ b/1-batch/docker/10_debezium_kafka_apicurio_akhq/docker-compose.yaml
@@ -76,9 +76,9 @@ services:
       - OFFSET_STORAGE_REPLICATION_FACTOR=1  # default 3
       - STATUS_STORAGE_REPLICATION_FACTOR=1  # default 3
 
-      - KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - VALUE_CONVERTER_SCHEMAS_ENABLE=false
+      # - KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - VALUE_CONVERTER_SCHEMAS_ENABLE=false
 
       # https://debezium.io/documentation/reference/configuration/avro.html
       # Configure global converters to use Apicurio Avro
