--- a/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/docker-compose.yaml
@@ -153,6 +153,33 @@ services:
       - "--credential=POLARIS,admin,password123"
     restart: "no"
 
+  # 7. kafka-connect (sink)
+  # https://docs.confluent.io/platform/current/installation/versions-interoperability.html
+  kafka-connect:
+    image: confluentinc/cp-kafka-connect:8.1.1
+    container_name: kafka-connect
+    depends_on:
+      - minio
+    ports:
+      - "8085:8085"
+    volumes:
+      - ./connect-plugins:/etc/kafka-connect/jars   # Iceberg connector JARs
+    environment:
+      CONNECT_BOOTSTRAP_SERVERS: "kafka:9092"
+      CONNECT_REST_ADVERTISED_HOST_NAME: "kafka-connect"
+      CONNECT_GROUP_ID: "kafka-connect-cluster"
+      CONNECT_CONFIG_STORAGE_TOPIC: "kafka-connect-configs"
+      CONNECT_OFFSET_STORAGE_TOPIC: "kafka-connect-offsets"
+      CONNECT_STATUS_STORAGE_TOPIC: "kafka-connect-status"
+      CONNECT_KEY_CONVERTER: "io.confluent.connect.avro.AvroConverter"
+      CONNECT_VALUE_CONVERTER: "io.confluent.connect.avro.AvroConverter"
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: "http://apicurio:8080/apis/ccompat/v7"
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: "http://apicurio:8080/apis/ccompat/v7"
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_PLUGIN_PATH: "/usr/share/java,/etc/kafka-connect/jars"
+
 networks:
   default:
     external: true
